--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-transition-group": "^4.4.0",
+    "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.2",
